fix: Wrap buttons on small screens

--- a/src/app/room/topic-editor/topic-editor.component.scss
+++ b/src/app/room/topic-editor/topic-editor.component.scss
@@ -12,7 +12,7 @@
 
 .buttons {
   flex-shrink: 0;
-  flex-grow: auto;
+  flex-wrap: wrap;
   display: flex;
   gap: 0.5rem;
   padding: 1rem 0;
