--- a/src/styles.scss
+++ b/src/styles.scss
@@ -248,6 +248,7 @@ $my-theme: mat.define-light-theme(
 
   .premium-banner-buttons {
     display: flex;
+    flex-wrap: wrap;
     gap: 0.5rem;
 
     .learn-more {
